# pageindex

./: .dockerignore  .gitignore  DOCKER_QUICKSTART.md  Dockerfile  README.md  build-docker.sh  docker-compose.yml  intelligent_ocr_search.py  model_configs.yaml  model_manager.py  ocr_indexing.py  prompt_config.yaml  prompt_templates.py  pyproject.toml  requirements.txt  streamlit_app.py
cookbook/: pageindex_RAG_simple.ipynb
docs/: API_REFERENCE.md  DOCKER_DEPLOYMENT.md  DOCKER_QUICKSTART.md  README.md  USAGE_GUIDE.md
pageindex/: __init__.py  model_manager.py  page_index_md.py  utils.py
